# Playground

./: .gitignore  CMakeLists.txt  README
libMean/: CMakeLists.txt
program/: CMakeLists.txt  main.c
qtProgram/: CMakeLists.txt  finddialog.cpp  finddialog.h  gui.cpp
